# polygrid-studio

./: .prettierrc  AGENTS.md  CLAUDE.md  README.md  SPEC.md  drizzle.config.ts  eslint.config.js  index.html  package-lock.json  package.json
.claude/: launch.json
.github/workflows/: macos-build.yml
docs/: DATABASE_SCHEMA.md  DESIGN_SYSTEM.md  PROJEKTREGELN.md  ai-todo.md
docs/modules/: MODUL_01_FOUNDATION.md
docs/specs/: MODUL_01_FOUNDATION.md  MODUL_02_PRODUKTVERWALTUNG.md  MODUL_03_DATEIMANAGER.md  MODUL_03_ENTSCHEIDUNGEN.md  MODUL_04_AUSGABENVERWALTUNG.md
drizzle/: 0000_mighty_solo.sql  0001_blue_gargoyle.sql  0002_absent_makkari.sql  0003_parallel_menace.sql  0004_little_princess_powerful.sql
drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  0003_snapshot.json  0004_snapshot.json  _journal.json
src/: App.tsx  globals.css  routeTree.gen.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 0001_initial.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/filesystem/: commands.rs  mod.rs  paths.rs
src/components/layout/: AppShell.tsx  CommandPalette.tsx  DetailPanel.tsx  Sidebar.tsx  ThemeProvider.tsx  index.ts
src/components/shared/: PlaceholderPage.tsx
src/components/ui/: badge.tsx  button.tsx  dialog.tsx  input.tsx  label.tsx  select.tsx  (+3 more)
src/hooks/: index.ts  useShortcuts.ts  useTheme.ts
src/i18n/: de.json
src/routes/: __root.tsx
src/stores/: index.ts  ui.store.ts  uiStore.ts
src/styles/: globals.css
src/types/: index.ts
src/utils/: colors.ts  index.ts
(+117 files in other folders)
