[package]
name = "polygrid-studio"
version = "0.1.0"
description = "PolyGrid Studio — Business OS for 3D Print Workshops"
authors = ["you"]
edition = "2021"

[lib]
name = "polygrid_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
